--- a/templates/base.html
+++ b/templates/base.html
@@ -1,35 +1,36 @@
-<!DOCTYPE html>
 <html lang="en">
-
+    {% load static %}
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-      
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
     <title>{% block title %}{% endblock %}</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+   
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
   </head>
   <body>
-    <header>
-        <nav>
-          <a href="{% url 'tasks:index' %}">
-              <h1>Tasks</h1>
-          </a>
-          {% if user.is_authenticated %}
-            <a href="#"> {{ user.username }} </a>
-            <a href="{% url 'account_logout' %}">Logout</a>
-          {% else %}
-            <a href="{% url 'account_login' %}">Login</a>
-            <a href="{% url 'account_signup' %}">SignUp</a>
-          {% endif %}
-        
+    <header class="base-header">
+       <a class="home" href="{% url 'tasks:index' %}"><h1>Tasks</h1></a> 
+       <nav class="menu">
+            <ul class="nav_links">
+                
+                {% if user.is_authenticated %}
+                    <li class=""><a class="" href="#"> {{ user.username }} </a></li>
+                    <li class=""><a class="" href="{% url 'account_logout' %}">Logout</a></li>
+                {% else %}
+                    <li class=""><a class="" href="{% url 'account_login' %}">Login</a></li>
+                    <li class=""></li><a class="" href="{% url 'account_signup' %}">SignUp</a></li>
+                {% endif %}
+            </ul>
+           
         </nav>
     </header>
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+    
 
-    {% block content %}
-    {% endblock %}
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
 
   </body>
 </html>
