--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,9 +5,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-li, a, button {
+li, a{
     
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: rgb(232, 230, 229);
     text-decoration: none;
     list-style: none;
@@ -18,7 +18,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 10%;
-    background-color: rgb(176, 173, 173);
+    background-color: rgb(52, 130, 233);
 }
 .nav_links  li {
     display: inline-block;
@@ -37,15 +37,23 @@ main {
     margin: auto;
 
 }
-.task {
-    width: 80%;
-    background: linear-gradient(to left bottom, rgba(255, 0, 0, 0.33), rgba(0, 0, 255, 0.543));
-    box-shadow: 2px 2px 2px rgba(105, 104, 104, 0.773);
+
+
+.submit-button {
+    padding: 5px;
+    width: 50px;
+    border: none;
+    box-shadow: 2px 2px 2px rgba(146, 145, 145, 0.831);
     border-radius: 5px;
-    padding: 10px;
-    margin: 2% 20px;
+    cursor: pointer;
+    margin-top: 10px;
 }
-.task:hover {
-    transform: scale(1.01);
-    transition: .5s ;
+.submit-button:hover {
+    transform: translateY(1px);
+    transition: .3s;
 }
+.warning {
+    background-color: rgb(253, 55, 55);
+    
+}
+
