--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,49 +4,43 @@
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-li, a{
-    
-    font-size: 1.5rem;
-    color: rgb(232, 230, 229);
-    text-decoration: none;
-    list-style: none;
-}
 
+
+/* HEADER */
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 10%;
-    background-color: rgb(52, 130, 233);
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 20px 10px;
+   background-color: rgb(52, 130, 233);
 }
+
 .nav_links  li {
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.nav_links li a {
-    transition: all 0.3s ease 0s;
-}
-.nav_links li a:hover {
-    color: aqua;
+   display: inline-block;
+   padding: 0px 20px;
 }
 
 
+/* MAIN */
+main {
+   width: 70vw;
+   margin: auto;
+}
+/* TASKS */
 
-.submit-button {
-    padding: 5px;
-    width: 50px;
-    border: none;
-    box-shadow: 2px 2px 2px rgba(146, 145, 145, 0.831);
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
+section.concluded-tasks{
+   display: none;
 }
-.submit-button:hover {
-    transform: translateY(1px);
-    transition: .3s;
+.concluded-task {
+   box-shadow: 4px 4px 4px rgb(154, 245, 181);
+   background-color: rgb(129, 245, 143);
+   margin: 10px;
+   padding: 10px;
 }
-.warning {
-    background-color: rgb(253, 55, 55);    
+#toggle-concluded-tasks:checked ~ .concluded-tasks {
+   display: block;
 }
-
+label {
+   -webkit-user-select: none;
+   user-select: none;
+}
