estilizacao e docker quase acabados

--- a/tasks/templates/tasks/edit_task.html
+++ b/tasks/templates/tasks/edit_task.html
@@ -3,7 +3,7 @@
 {% block head_title %}Edit Task{% endblock %}
 
 {% block content %}
-   <h1>Edit TasK</h1>
+   <h1>Edit Task</h1>
    <form method="post">
       {% csrf_token %}
       {{ form }}
