--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,11 @@
    {% include "head.html" %}
    <body>
       {% include "header.html" %}
-
-      {% block content %}
-      {% endblock %}
+      <main>
+         {% block content %}
+         {% endblock %}
+      </main>
+      
 
    </body>
 </html>
