--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,26 +4,39 @@
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+:root {
+   --main-bg-color: #DFF6FF;
+   --dark-blue: #031b2a;
+   --blue: #2872e1;
+   --light-gray: rgba(255, 255, 255, 0.478); 
+}
+body {
+   background-color: var(--main-bg-color);
+}
 
 /* HEADER */
 header {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   padding: 20px 10px;
-   background-color: rgb(52, 130, 233);
+   padding: 20px 40px;
+   background-color: var(--blue);
 }
-
+header a {
+   color: var(--dark-blue);
+   text-decoration: none;
+   
+}
 .nav_links  li {
    display: inline-block;
    padding: 0px 20px;
+   color: var(--dark-blue);
+   
 }
-
 
 /* MAIN */
 main {
-   width: 70vw;
+   width: 50vw;
    margin: auto;
 }
 /* TASKS */
@@ -31,16 +44,86 @@ main {
 section.concluded-tasks{
    display: none;
 }
-.concluded-task {
-   box-shadow: 4px 4px 4px rgb(154, 245, 181);
-   background-color: rgb(129, 245, 143);
-   margin: 10px;
-   padding: 10px;
+#toggle-concluded-tasks {
+   display: none; 
 }
 #toggle-concluded-tasks:checked ~ .concluded-tasks {
    display: block;
 }
-label {
+.card {
+   display: grid;
+   grid-template-columns: 70% 30%;
+   grid-template-areas: 
+      'title  conclude-task'
+      'description conclude-task'
+      'date  delete-task'
+;
+   box-shadow: 4px 4px 4px rgb(196, 197, 196);
+   margin: 15px 0 10px 0px;
+   padding: 20px; 
+   border-radius: 10px;
+   background-color:var(--light-gray);
+   max-width: 500px;
+ 
+}
+.concluded-task {   
+   background-color: rgb(107, 201, 118);
+}
+
+label[for=toggle-concluded-tasks] {
    -webkit-user-select: none;
    user-select: none;
+   border: 3px solid #0a3049;
+   margin-top: 25px;
+   margin-bottom: 20px;
+   display:inline-block;
+   padding: 8px;
+   background-color: #092638bd;
+   color: var(--light-gray);
+   font-weight: bold;
 }
+label[for=toggle-concluded-tasks]:hover{
+   background-color: #092638b0;
+   transition: .3s;
+}
+.card-title {
+   grid-area: title;
+   font-weight: 600;
+}
+.card-description {
+   grid-area: description;
+}
+.card-conc_date {
+   grid-area: conc_date;
+}
+.card .action {
+   width: 100px;
+   margin-bottom: 10px;
+   border: none;
+   padding: 5px;
+   box-shadow: 2px 2px 3px rgb(148, 145, 145);
+   cursor: pointer;
+   border-radius: 4px;
+   font-weight: 500;
+
+}
+.card .action:hover {
+   transform: translateY(-1px);
+   transition: .3s;
+}
+#conclude-task {
+   grid-area: conclude-task;
+   background-color: rgb(125, 197, 125);
+}
+#edit-task {
+   grid-area: edit-task;
+   background-color: lightblue;
+
+}
+#delete-task {
+   grid-area: delete-task;
+   background-color: rgb(246, 101, 101);
+
+}
+
+
