--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -12,7 +12,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit" class="submit-button warning">Sair</button>
+  <button type="submit" class="submit-button warning">Log out</button>
 </form>
 
 
